[project]
name = "livrotracker"
version = "0.1.0"
description = "Gerenciador de livros"
authors = [
    {name = "thpiress7",email = "thiagopires.codes@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.37,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
